adicionei as opçoes telefone,nome de usuario ou email

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="login container">
         <img src="logotipo-da-aplicacao-instagram_23-2151544088.avif" alt="logo do Instagram" class="logo">
         <form class="login-form">
-            <input type="text" name="username" placeholder="Usuário ou E-mail" required>
+            <input type="text" name="username" placeholder="Telefone,nome de usuario ou email" required>
             <input type="password" name="password" placeholder="Senha" required>
             <button type="submit">Login</button>
             <div class="dividider"></div>
